--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -154,7 +154,7 @@
         <% end %>
       </li>
 
-      <% if item.image.blank? %>
+      <% if item.blank? %>
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
