--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -132,11 +132,12 @@
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
 
-          <%# 商品が売れていればsold outを表示しましょう %>
+          <% if item.item_purchase != nil %>
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
-          <%# //商品が売れていればsold outを表示しましょう %>
+          <% end %>
+          
 
         </div>
         <div class='item-info'>
@@ -153,8 +154,7 @@
         </div>
         <% end %>
       </li>
-
-      <% if item.blank? %>
+      <% if @items.blank? %>
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
